==XXX Design experiments==
In ISEM paper, we compare: Percentage of Nos with Real GDP growth rate.

Since we cannot compute Percentage of Nos, we compare:

SUM of Nos from GESIS with Employment rate, by sex from Estatwrap from Germany.

This would show: Integration of Germany. 

In ISEM paper, we had with respect to size of datasets:

1) 2 DS with 20,268 triples
3a) 4 DS with 24,636 triples
3b) 8 DS with 35,482 triples

We now would like to extend this.

==2014-10-19==
* Refined test cases for EKAW paper for estimating size of Global Cube, see http://linked-data-cubes.org/index.php/Global_Cube_Evaluation_EKAW14#Program_for_computing_the_number_of_derived_data_cubes_in_case_conversion_correspondences_are_seen_as_merging_correspondences_and_no_cycles_.28repeated_application_of_correspondences.29_are_allowed

==2014-09-22==
* Refined test cases for EKAW paper, see http://linked-data-cubes.org/index.php/Global_Cube_Evaluation_EKAW14
* tagged version
* data added to ekaw version

==2014-09-21==
* Fixed loading problem:

The problem was still the loading of resources and setting of setLoaded. 

How do want to have it?

We have a URI of a cube that we want to load.

We check whether already loaded: 1) Is URI loaded? OR 2) Is Location loaded?

If yes, we set: setLoaded(URI), setLoaded(Location).

If not, we load: loadCube()

For every resource: 1) Is URI loaded? OR 2) Is Location loaded?

If yes, we set: setLoaded(URI), setLoaded(Location).

If not, we load: loadInStore(URI)

After loading, we set it loaded: setLoaded(URI), setLoaded(Location).

After we loaded the cube, we set it loaded: setLoaded(URI), setLoaded(Location).

Note: We assume that if a dataset is loaded, then the full directed crawling was executed. We make that sure by not simply crawling other datasets in the direct crawl.

Also, had to change from URL to Sring (!)

loadedMap.put(resource.toString().hashCode(), true);

==2014-09-20==
* Now, BaseCube-Derived returns all measures, but not if asked for data.