@@ -1,9 +1,9 @@
 handlers=java.util.logging.FileHandler, java.util.logging.ConsoleHandler
 
-java.util.logging.ConsoleHandler.level=INFO
+java.util.logging.ConsoleHandler.level=CONFIG
 java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
 
-java.util.logging.FileHandler.level=INFO
+java.util.logging.FileHandler.level=CONFIG
 java.util.logging.FileHandler.pattern=log/olap4ld_%u.log
 java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
 java.util.logging.FileHandler.append=true
