@@ -1917,6 +1917,18 @@ class Olap4ldStatement implements OlapStatement {
 			return null;
 		}
 
+		@Override
+		public <T> T getObject(int arg0, Class<T> arg1) throws SQLException {
+			// TODO Auto-generated method stub
+			return null;
+		}
+
+		@Override
+		public <T> T getObject(String arg0, Class<T> arg1) throws SQLException {
+			// TODO Auto-generated method stub
+			return null;
+		}
+
 	}
 
 	/**
@@ -2485,6 +2497,32 @@ class Olap4ldStatement implements OlapStatement {
 			// TODO Auto-generated method stub
 
 		}
+
+		@Override
+		public <T> T getObject(int columnIndex, Class<T> type)
+				throws SQLException {
+			// TODO Auto-generated method stub
+			return null;
+		}
+
+		@Override
+		public <T> T getObject(String columnLabel, Class<T> type)
+				throws SQLException {
+			// TODO Auto-generated method stub
+			return null;
+		}
+	}
+
+	@Override
+	public void closeOnCompletion() throws SQLException {
+		// TODO Auto-generated method stub
+		
+	}
+
+	@Override
+	public boolean isCloseOnCompletion() throws SQLException {
+		// TODO Auto-generated method stub
+		return false;
 	}
 }
 
